[package]
name = "uebuild"
description = "Rust CLI for interfacing with Unreal Engine's command line api."
version = "0.1.1"
edition = "2021"
authors = ["Dustin Yost <dustin.yost.t@gmail.com>"]

[dependencies]
clap = { version = "4.0", features = ["derive", "env", "string"] }
dotenv = "0.15"

# [error] collapsing any error into one result type
anyhow = "1.0"
# [error] easy implementation of new errors
thiserror = "1.0"

# [async] base async traits
futures = "0.3"
# [async] adv async traits
futures-util = "0.3"
# [async] async/await syntax and multithreading
tokio = { version = "1.15", features = ["full"] }

# [serialization] general usage
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

glob = "0.3"
regex = "1.5"
# [utility] catching signals like CTRL+C from the terminal
signal-hook = "0.3"
zip = "0.6.3"
chrono = "0.4"
enumset = "1.0"
rust-ini = "0.18"
